boreal/tests/assets/invalid_files/compilation/non_iterable_identifier2.yar
// [error: identifier is not iterable]
rule z {
    condition: true
}

rule a {
    condition:
        for any a, b in z: (true)
}

